--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
 		"build:start:prod": "npm run build && npm run start:prod",
 		"lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix ./.gitignore",
 		"lint:format": "prettier --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\"",
-		"lint": "npm run lint:format && npm run lint:fix"
+		"lint": "npm run lint:format && npm run lint:fix",
+		"demo": "concurrently \"npm run dev\" \"cd ../frontend && npm run dev\""
 	},
 	"keywords": [],
 	"author": "",
@@ -21,6 +22,7 @@
 		"@types/node": "^16.11.7",
 		"@typescript-eslint/eslint-plugin": "^5.3.1",
 		"@typescript-eslint/parser": "^5.3.1",
+		"concurrently": "^7.2.1",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.2.0",
 		"eslint-config-prettier": "^8.3.0",
@@ -28,13 +30,23 @@
 		"eslint-plugin-import": "^2.25.3",
 		"eslint-plugin-prettier": "^4.0.0",
 		"nodemon": "^2.0.15",
+		"pino-pretty": "^7.6.1",
 		"prettier": "^2.4.1",
 		"ts-node": "^10.4.0",
 		"tsconfig-paths": "^3.11.0",
 		"typescript": "^4.4.4"
 	},
 	"dependencies": {
+		"argon2": "^0.28.5",
+		"cors": "^2.8.5",
+		"dayjs": "^1.11.2",
 		"dotenv-safe": "^8.2.0",
-		"express": "^4.17.2"
+		"express": "^4.17.2",
+		"helmet": "^5.1.0",
+		"http-status-codes": "^2.2.0",
+		"jsonwebtoken": "^8.5.1",
+		"nanoid": "^3.3.4",
+		"pino": "^7.11.0",
+		"yup": "^0.32.11"
 	}
 }
