--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
 		"eslint-import-resolver-typescript": "^2.5.0",
 		"eslint-plugin-import": "^2.25.3",
 		"eslint-plugin-prettier": "^4.0.0",
+		"morgan": "^1.10.0",
 		"nodemon": "^2.0.15",
 		"pino-pretty": "^7.6.1",
 		"prettier": "^2.4.1",
